--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
             <ul class="links">
               <li class="home-sidebar">
-                <a a href="" class="home">Home</a>
+                <a a href="index.html" class="home">Home</a>
               </li>
               <li class="discover-sidebar">
                 <a href="" class="discover">Discover</a>
@@ -58,10 +58,10 @@
                 <a href="" class="contact">Contact</a>
               </li>
               <li class="register-sidebar">
-                <a href="" class="register">Register</a>
+                <a href="sign-up.html" class="register">Register</a>
               </li>
               <li class="sign-in-sidebar">
-                <a href="" class="sign-in">Sign-in</a>
+                <a href="sign-in.html" class="sign-in">Sign-in</a>
               </li>
             </ul>
           </div>
@@ -513,6 +513,7 @@
     </div>
 
     <script src="home.js"></script>
+    <script src="commonFeatures.js"></script>
   </body>
   <!-- end of body -->
 </html>
