--- a/check-inbox.html
+++ b/check-inbox.html
@@ -35,7 +35,7 @@
             </div>
             <ul class="links">
               <li class="home-sidebar">
-                <a a href="" class="home">Home</a>
+                <a a href="index.html" class="home">Home</a>
               </li>
               <li class="discover-sidebar">
                 <a href="" class="discover">Discover</a>
@@ -50,10 +50,10 @@
                 <a href="" class="contact">Contact</a>
               </li>
               <li class="register-sidebar">
-                <a href="" class="register">Register</a>
+                <a href="sign-up.html" class="register">Register</a>
               </li>
               <li class="sign-in-sidebar">
-                <a href="" class="sign-in">Sign-in</a>
+                <a href="sign-in.html" class="sign-in">Sign-in</a>
               </li>
             </ul>
           </div>
