--- a/forgot-pw.html
+++ b/forgot-pw.html
@@ -38,7 +38,7 @@
             </div>
             <ul class="links">
               <li class="home-sidebar">
-                <a a href="" class="home">Home</a>
+                <a a href="index.html" class="home">Home</a>
               </li>
               <li class="discover-sidebar">
                 <a href="" class="discover">Discover</a>
@@ -53,10 +53,10 @@
                 <a href="" class="contact">Contact</a>
               </li>
               <li class="register-sidebar">
-                <a href="" class="register">Register</a>
+                <a href="sign-up.html" class="register">Register</a>
               </li>
               <li class="sign-in-sidebar">
-                <a href="" class="sign-in">Sign-in</a>
+                <a href="sign-in.html" class="sign-in">Sign-in</a>
               </li>
             </ul>
           </div>
@@ -108,10 +108,12 @@
           >
           and
           <span class="terms-privacy-links"
-            ><a class="terms-privacy-links" href="">Privacy Statement</a></span
+            ><a class="terms-privacy-links" href="">Privacy Statement</a> </span
           >.
         </p>
       </section>
     </main>
+
+    <script src="commonFeatures.js"></script>
   </body>
 </html>
