--- a/place-details.html
+++ b/place-details.html
@@ -42,7 +42,7 @@
             </div>
             <ul class="links">
               <li class="home-sidebar">
-                <a a href="" class="home">Home</a>
+                <a a href="index.html" class="home">Home</a>
               </li>
               <li class="discover-sidebar">
                 <a href="" class="discover">Discover</a>
@@ -57,10 +57,10 @@
                 <a href="" class="contact">Contact</a>
               </li>
               <li class="register-sidebar">
-                <a href="" class="register">Register</a>
+                <a href="sign-up.html" class="register">Register</a>
               </li>
               <li class="sign-in-sidebar">
-                <a href="" class="sign-in">Sign-in</a>
+                <a href="sign-in.html" class="sign-in">Sign-in</a>
               </li>
             </ul>
           </div>
@@ -1120,5 +1120,6 @@
 
     <!-- javascript code link -->
     <script src="placeDet.js"></script>
+    <script src="commonFeatures.js"></script>
   </body>
 </html>
