--- a/search-results.html
+++ b/search-results.html
@@ -133,6 +133,391 @@
       </div>
 
       <main class="main-container-search-results">
+        <!--  -->
+        <!-- start of aside responsive design -->
+        <section class="filter-responsive">
+          <nav class="filter-places">
+            <div>
+              <!-- start of section 1 filters -->
+              <div class="search-filter-aside">
+                <h3>Search by property name</h3>
+                <input type="text" placeholder="eg. Beach westpalm" />
+              </div>
+              <!-- end of section 1 filters -->
+              <!-- start of section 2 filters -->
+              <div class="your-budget-box">
+                <div class="budget-box-title">
+                  <h3>Your budget per day</h3>
+                </div>
+
+                <div class="flex-prices-checkbox">
+                  <div class="filter-price-checkboxs">
+                    <label class="label" for="checkbox"
+                      ><input class="checkbox" id="0-200" type="checkbox" /> $ 0
+                      - $ 200</label
+                    >
+
+                    <label class="label" for="checkbox"
+                      ><input class="checkbox" id="0-200" type="checkbox" /> $
+                      200 - $ 500</label
+                    >
+                    <label class="label" for="checkbox"
+                      ><input class="checkbox" id="0-200" type="checkbox" /> $
+                      500 - $ 1,000</label
+                    >
+                    <label class="label" for="checkbox"
+                      ><input class="checkbox" id="0-200" type="checkbox" /> $
+                      1,000 - $ 2,000</label
+                    >
+                    <label class="label" for="checkbox"
+                      ><input class="checkbox" id="0-200" type="checkbox" /> $
+                      2,000 - $ 5,000</label
+                    >
+                  </div>
+                  <div class="number-of-price-rooms">
+                    <p>250</p>
+                    <p>156</p>
+                    <p>8</p>
+                    <p>206</p>
+                    <p>54</p>
+                  </div>
+                </div>
+                <!-- end of filter checkboxes -->
+                <div class="toogle-text-budget">
+                  <p>set your own budget</p>
+                  <svg
+                    class="toogle"
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="36"
+                    height="28"
+                    viewBox="0 0 36 28"
+                    fill="none"
+                  >
+                    <rect
+                      x="4"
+                      y="4"
+                      width="32"
+                      height="16"
+                      rx="8"
+                      fill="#BDBDBD"
+                    />
+                    <g filter="url(#filter0_d_4_1694)">
+                      <rect
+                        x="4"
+                        y="2"
+                        width="20"
+                        height="20"
+                        rx="10"
+                        fill="white"
+                      />
+                    </g>
+                    <defs>
+                      <filter
+                        id="filter0_d_4_1694"
+                        x="0"
+                        y="0"
+                        width="28"
+                        height="28"
+                        filterUnits="userSpaceOnUse"
+                        color-interpolation-filters="sRGB"
+                      >
+                        <feFlood
+                          flood-opacity="0"
+                          result="BackgroundImageFix"
+                        />
+                        <feColorMatrix
+                          in="SourceAlpha"
+                          type="matrix"
+                          values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
+                          result="hardAlpha"
+                        />
+                        <feOffset dy="2" />
+                        <feGaussianBlur stdDeviation="2" />
+                        <feComposite in2="hardAlpha" operator="out" />
+                        <feColorMatrix
+                          type="matrix"
+                          values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"
+                        />
+                        <feBlend
+                          mode="normal"
+                          in2="BackgroundImageFix"
+                          result="effect1_dropShadow_4_1694"
+                        />
+                        <feBlend
+                          mode="normal"
+                          in="SourceGraphic"
+                          in2="effect1_dropShadow_4_1694"
+                          result="shape"
+                        />
+                      </filter>
+                    </defs>
+                  </svg>
+                </div>
+                <!-- end of prices filter checkboxs -->
+              </div>
+              <!-- end of budget box div -->
+            </div>
+
+            <!-- second section -->
+            <div>
+              <div class="rating-box">
+                <div class="ratng-box-title">
+                  <h3>Rating</h3>
+                </div>
+                <p>Show only ratings more than</p>
+                <div class="rating-from-one-to-five">
+                  <div class="rating-one">
+                    1
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="18"
+                      height="18"
+                      viewBox="0 0 18 18"
+                      fill="none"
+                    >
+                      <g clip-path="url(#clip0_4_1538)">
+                        <path
+                          d="M9.00018 12.75L4.59168 15.4425L5.79018 10.4175L1.86768 7.0575L7.01643 6.645L9.00018 1.875L10.9839 6.645L16.1334 7.0575L12.2102 10.4175L13.4087 15.4425L9.00018 12.75Z"
+                          fill="#F2994A"
+                        />
+                      </g>
+                      <defs>
+                        <clipPath id="clip0_4_1538">
+                          <rect width="18" height="18" fill="white" />
+                        </clipPath>
+                      </defs>
+                    </svg>
+                  </div>
+                  <div class="rating">
+                    2
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="18"
+                      height="18"
+                      viewBox="0 0 18 18"
+                      fill="none"
+                    >
+                      <g clip-path="url(#clip0_4_1538)">
+                        <path
+                          d="M9.00018 12.75L4.59168 15.4425L5.79018 10.4175L1.86768 7.0575L7.01643 6.645L9.00018 1.875L10.9839 6.645L16.1334 7.0575L12.2102 10.4175L13.4087 15.4425L9.00018 12.75Z"
+                          fill="#F2994A"
+                        />
+                      </g>
+                      <defs>
+                        <clipPath id="clip0_4_1538">
+                          <rect width="18" height="18" fill="white" />
+                        </clipPath>
+                      </defs>
+                    </svg>
+                  </div>
+                  <div class="rating">
+                    3
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="18"
+                      height="18"
+                      viewBox="0 0 18 18"
+                      fill="none"
+                    >
+                      <g clip-path="url(#clip0_4_1538)">
+                        <path
+                          d="M9.00018 12.75L4.59168 15.4425L5.79018 10.4175L1.86768 7.0575L7.01643 6.645L9.00018 1.875L10.9839 6.645L16.1334 7.0575L12.2102 10.4175L13.4087 15.4425L9.00018 12.75Z"
+                          fill="#F2994A"
+                        />
+                      </g>
+                      <defs>
+                        <clipPath id="clip0_4_1538">
+                          <rect width="18" height="18" fill="white" />
+                        </clipPath>
+                      </defs>
+                    </svg>
+                  </div>
+                  <div class="rating">
+                    4
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="18"
+                      height="18"
+                      viewBox="0 0 18 18"
+                      fill="none"
+                    >
+                      <g clip-path="url(#clip0_4_1538)">
+                        <path
+                          d="M9.00018 12.75L4.59168 15.4425L5.79018 10.4175L1.86768 7.0575L7.01643 6.645L9.00018 1.875L10.9839 6.645L16.1334 7.0575L12.2102 10.4175L13.4087 15.4425L9.00018 12.75Z"
+                          fill="#F2994A"
+                        />
+                      </g>
+                      <defs>
+                        <clipPath id="clip0_4_1538">
+                          <rect width="18" height="18" fill="white" />
+                        </clipPath>
+                      </defs>
+                    </svg>
+                  </div>
+                  <div class="rating-five">
+                    5
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="18"
+                      height="18"
+                      viewBox="0 0 18 18"
+                      fill="none"
+                    >
+                      <g clip-path="url(#clip0_4_1538)">
+                        <path
+                          d="M9.00018 12.75L4.59168 15.4425L5.79018 10.4175L1.86768 7.0575L7.01643 6.645L9.00018 1.875L10.9839 6.645L16.1334 7.0575L12.2102 10.4175L13.4087 15.4425L9.00018 12.75Z"
+                          fill="#F2994A"
+                        />
+                      </g>
+                      <defs>
+                        <clipPath id="clip0_4_1538">
+                          <rect width="18" height="18" fill="white" />
+                        </clipPath>
+                      </defs>
+                    </svg>
+                  </div>
+                </div>
+                <!-- end of 5 ratings boxes -->
+              </div>
+              <!-- end of rating box -->
+              <div class="popular-filters-box">
+                <div class="popular-filters-title">
+                  <h3>Popular Filters</h3>
+                </div>
+
+                <div class="flex-popular-filters-checkbox">
+                  <div class="popular-filters-checkboxs">
+                    <label class="label" for="checkbox"
+                      ><input class="checkbox" id="0-200" type="checkbox" />Free
+                      cancellation</label
+                    >
+
+                    <label class="label" for="checkbox"
+                      ><input
+                        class="checkbox"
+                        id="0-200"
+                        type="checkbox"
+                      />Spa</label
+                    >
+                    <label class="label" for="checkbox"
+                      ><input
+                        class="checkbox"
+                        id="0-200"
+                        type="checkbox"
+                      />Beach front</label
+                    >
+                    <label class="label" for="checkbox"
+                      ><input class="checkbox" id="0-200" type="checkbox" />Hot
+                      tub/ jacuzzi</label
+                    >
+                    <label class="label" for="checkbox"
+                      ><input class="checkbox" id="0-200" type="checkbox" />Book
+                      without credit card</label
+                    >
+                    <label class="label" for="checkbox"
+                      ><input class="checkbox" id="0-200" type="checkbox" />No
+                      prepayment</label
+                    >
+                  </div>
+                  <div class="number-of-price-rooms">
+                    <p>250</p>
+                    <p>156</p>
+                    <p>8</p>
+                    <p>206</p>
+                    <p>54</p>
+                  </div>
+                </div>
+                <!-- end of flex for popular filters box -->
+              </div>
+              <!-- end of popular filters box -->
+            </div>
+            <!-- end of second section -->
+            <!-- third section start -->
+            <div class="activities-filters-box">
+              <div class="activities-filters-title">
+                <h3>Activities</h3>
+              </div>
+
+              <div class="flex-activities-filters-checkbox">
+                <div class="activities<ul class="links">
+                  <li class="home-sidebar">
+                    <a a href="index.html" class="home">Home</a>
+                  </li>
+                  <li class="discover-sidebar">
+                    <a href="" class="discover">Discover</a>
+                  </li>
+                  <li class="activties-sidebar">
+                    <a href="" class="activties">Activties</a>
+                  </li>
+                  <li class="about-sidebar">
+                    <a href="" class="about">About</a>
+                  </li>
+                  <li class="contact-sidebar">
+                    <a href="" class="contact">Contact</a>
+                  </li>
+                  <li class="register-sidebar">
+                    <a href="sign-up.html" class="register">Register</a>
+                  </li>
+                  <li class="sign-in-sidebar">
+                    <a href="sign-in.html" class="sign-in">Sign-in</a>
+                  </li>
+                </ul>-filters-checkboxs">
+                  <label class="label" for="checkbox"
+                    ><input
+                      class="checkbox"
+                      id="0-200"
+                      type="checkbox"
+                    />Fishing</label
+                  >
+
+                  <label class="label" for="checkbox"
+                    ><input
+                      class="checkbox"
+                      id="0-200"
+                      type="checkbox"
+                    />Hiking</label
+                  >
+                  <label class="label" for="checkbox"
+                    ><input
+                      class="checkbox"
+                      id="0-200"
+                      type="checkbox"
+                    />Beach</label
+                  >
+                  <label class="label" for="checkbox"
+                    ><input class="checkbox" id="0-200" type="checkbox" />Hot
+                    tub/ jacuzzi</label
+                  >
+                  <label class="label" for="checkbox"
+                    ><input
+                      class="checkbox"
+                      id="0-200"
+                      type="checkbox"
+                    />Cycling</label
+                  >
+                  <label class="label" for="checkbox"
+                    ><input
+                      class="checkbox"
+                      id="0-200"
+                      type="checkbox"
+                    />Sauna</label
+                  >
+                </div>
+                <div class="number-of-price-rooms">
+                  <p>250</p>
+                  <p>156</p>
+                  <p>8</p>
+                  <p>206</p>
+                  <p>54</p>
+                </div>
+              </div>
+            </div>
+            <!-- third section end -->
+          </nav>
+        </section>
+        <!-- end of aside responsive design -->
+        <!--  -->
+        <!--  -->
         <div class="aside-container">
           <aside class="filter-aside">
             <div class="search-filter-aside">
@@ -1603,6 +1988,8 @@
           <p>my Dream Place 2022</p>
         </div>
       </div>
+
+      
       <script src="home.js"></script>
     </body>
   </html>
