--- a/sign-up.html
+++ b/sign-up.html
@@ -40,7 +40,7 @@
             </div>
             <ul class="links">
               <li class="home-sidebar">
-                <a a href="" class="home">Home</a>
+                <a a href="index.html" class="home">Home</a>
               </li>
               <li class="discover-sidebar">
                 <a href="" class="discover">Discover</a>
@@ -55,10 +55,10 @@
                 <a href="" class="contact">Contact</a>
               </li>
               <li class="register-sidebar">
-                <a href="" class="register">Register</a>
+                <a href="sign-up.html" class="register">Register</a>
               </li>
               <li class="sign-in-sidebar">
-                <a href="" class="sign-in">Sign-in</a>
+                <a href="sign-in.html" class="sign-in">Sign-in</a>
               </li>
             </ul>
           </div>
@@ -91,10 +91,8 @@
       <section class="sign-up-section">
         <h1>Register</h1>
         <form class="form-sign-up">
-          <label class="label-email-box">
-            Your email address
-          </label>
-            <input class="text-box" type="text" placeholder="" />
+          <label class="label-email-box"> Your email address </label>
+          <input class="text-box" type="text" placeholder="" />
         </form>
         <a href="create-pw.html"
           ><button class="sign-up-button">Continue with email</button></a
@@ -138,11 +136,13 @@
         <div class="sign-in-instaed">
           <p class="have-account">Already have an account?</p>
           <a href="sign-in.html"
-            ><button class="sign-in-sign-up-page">Sign in</button></a>
+            ><button class="sign-in-sign-up-page">Sign in</button></a
+          >
         </div>
       </section>
     </main>
 
     <script src="home.js"></script>
+    <script src="commonFeatures.js"></script>
   </body>
 </html>
