--- a/index.html
+++ b/index.html
@@ -245,13 +245,13 @@
       <!-- start of articles section -->
       <section class="choose-country-section">
         <div class="flex-countries">
-        <!-- start of article 1 -->
+          <!-- start of article 1 -->
           <article class="choose-country-section-article">
             <img
-            class="choose-country-section-article-img"
-            src="imgs/article1-section1.jpg"
-            alt=""
-            loading="lazy"
+              class="choose-country-section-article-img"
+              src="imgs/article1-section1.jpg"
+              alt=""
+              loading="lazy"
             />
             <h2>Australia</h2>
             <p>2246 properties</p>
@@ -259,79 +259,77 @@
           <!-- end of article 1 -->
           <!-- ------------------- -->
           <!-- start of article 2 -->
-          
+
           <article class="choose-country-section-article">
             <img
-            class="choose-country-section-article-img"
-            src="imgs/article2-section1.jpg"
-            alt=""
-            loading="lazy"
+              class="choose-country-section-article-img"
+              src="imgs/article2-section1.jpg"
+              alt=""
+              loading="lazy"
             />
             <h2>Japan</h2>
             <p>1278 properties</p>
           </article>
           <!-- end of article 2 -->
         </div>
-          <!-- ------------------- -->
-          <div class="flex-countries">
-        <!-- start of article 3 -->
-        <article class="choose-country-section-article">
-          <img
-          class="choose-country-section-article-img"
-          src="imgs/article3-section1.jpg"
-          alt=""
-          loading="lazy"
-          />
-          <h2>New Zealand</h2>
-          <p>480 properties</p>
-        </article>
-        <!-- end of article 3 -->
         <!-- ------------------- -->
-        <!-- start of article 4 -->
-        <article class="choose-country-section-article">
-          <img
-          class="choose-country-section-article-img"
-          src="imgs/article2-section3.jpg"
-          alt=""
-          loading="lazy"
-          />
-          <h2>Greece</h2>
-          <p>320 properties</p>
-        </article>
-        <!-- end of article 4 -->
-      </div>
+        <div class="flex-countries">
+          <!-- start of article 3 -->
+          <article class="choose-country-section-article">
+            <img
+              class="choose-country-section-article-img"
+              src="imgs/article3-section1.jpg"
+              alt=""
+              loading="lazy"
+            />
+            <h2>New Zealand</h2>
+            <p>480 properties</p>
+          </article>
+          <!-- end of article 3 -->
+          <!-- ------------------- -->
+          <!-- start of article 4 -->
+          <article class="choose-country-section-article">
+            <img
+              class="choose-country-section-article-img"
+              src="imgs/article2-section3.jpg"
+              alt=""
+              loading="lazy"
+            />
+            <h2>Greece</h2>
+            <p>320 properties</p>
+          </article>
+          <!-- end of article 4 -->
+        </div>
       </section>
       <!-- end of articles section -->
-      
+
       <!-- start of inspiration section -->
       <h1 class="inspiration-heading">Get inspiration for your next trip</h1>
       <section class="inspiration-section">
         <article class="inspiration-article1">
-          <div class="overlay"></div>
-          <div class="h2-inspiration">
-            <h2>Sydeny’s 10 most fashionable 5 star hotels</h2>
-          </div>
-          <p>
+          <div class="overlay-inspiration"></div>
+          <h2 class="h2-inspiration">
+            Sydeny’s 10 most fashionable 5 star hotels
+          </h2>
+          <p class="p-inspiration">
             Browse the fastest growing tourism sector in the heart of Australia
             tourism capital ....
           </p>
         </article>
         <article class="inspiration-article2">
-          <div class="overlay"></div>
-          <div class="h2-inspiration">
-            <h2>Top cities for Vegan Travellers</h2>
-          </div>
-          <p>
+          <div class="overlay-inspiration"></div>
+          <h2 class="h2-inspiration">Top cities for Vegan Travellers</h2>
+          <p class="p-inspiration">
             Top sites where you do not have to worry about being a vegan. Our
             tourist guide is here...
           </p>
         </article>
         <article class="inspiration-article3">
-          <div class="overlay"></div>
-          <div class="h2-inspiration">
-            <h2>World’s top destinations during and post covid timeline</h2>
-          </div>
-          <p>
+          <div class="overlay-inspiration"></div>
+          <h2 class="h2-inspiration">
+            World’s top destinations during and post covid timeline
+          </h2>
+          <p class="p-inspiration">
             Pandemic is still intact and will be here for a longer time. Here’s
             where your next destination...
           </p>
