--- a/sign-in.html
+++ b/sign-in.html
@@ -89,7 +89,7 @@
     <main class="main-container-sign-in">
       <section class="sign-up-section">
         <h1>Sign in</h1>
-        <form class="form-sign-up">
+        <form class="form-sign-in">
           <label class="label-email-box">Email address</label>
           <input class="text-box" type="text" placeholder="" />
           <label class="label-password-box"> Password </label>
@@ -116,7 +116,8 @@
               stroke-linejoin="round"
             />
           </svg>
-          <input class="text-box" type="text" placeholder="" />
+          <input class="text-box-password" type="password" placeholder="" />
+          <div class="passowrd-line hide-password-line"></div>
         </form>
 
         <div class="keepme-sign-in-forgot">
@@ -176,7 +177,7 @@
         </div>
       </section>
     </main>
-    <script src="home.js"></script>
     <script src="commonFeatures.js"></script>
+    <script src="signIn.js"></script>
   </body>
 </html>
