--- a/create-pw.html
+++ b/create-pw.html
@@ -96,7 +96,7 @@
         <form class="form-sign-up">
           <label class="label-create-password-box">Password</label>
           <svg
-            class="eye-create-password"
+            class="eye-password-create"
             xmlns="http://www.w3.org/2000/svg"
             width="20"
             height="21"
@@ -118,35 +118,57 @@
               stroke-linejoin="round"
             />
           </svg>
-          <input class="text-box" type="text" placeholder="" />
-
-          <label class="label-rewrite-password">Confirm password</label>
-          <svg
-            class="eye-create-password-rewrite"
-            xmlns="http://www.w3.org/2000/svg"
-            width="20"
-            height="21"
-            viewBox="0 0 20 21"
-            fill="none"
-          >
-            <path
-              d="M12.9833 10.5C12.9833 12.15 11.6499 13.4833 9.99993 13.4833C8.34993 13.4833 7.0166 12.15 7.0166 10.5C7.0166 8.85 8.34993 7.51666 9.99993 7.51666C11.6499 7.51666 12.9833 8.85 12.9833 10.5Z"
-              stroke="#4F4F4F"
-              stroke-width="1.5"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-            />
-            <path
-              d="M9.99987 17.3916C12.9415 17.3916 15.6832 15.6583 17.5915 12.6583C18.3415 11.4833 18.3415 9.50831 17.5915 8.33331C15.6832 5.33331 12.9415 3.59998 9.99987 3.59998C7.0582 3.59998 4.31654 5.33331 2.4082 8.33331C1.6582 9.50831 1.6582 11.4833 2.4082 12.6583C4.31654 15.6583 7.0582 17.3916 9.99987 17.3916Z"
-              stroke="#4F4F4F"
-              stroke-width="1.5"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-            />
-          </svg>
-          <input class="text-box" type="text" placeholder="" />
+          <input
+            class="text-box-create"
+            type="password"
+            placeholder=""
+            required
+          />
+          <div class="password-line-create hide-password-line"></div>
+          <div class="warning-login">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              version="1.1"
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+              width="20"
+              height="20"
+              x="0"
+              y="0"
+              viewBox="0 0 512 512"
+              style="enable-background: new 0 0 512 512"
+              xml:space="preserve"
+              class=""
+            >
+              <g>
+                <path
+                  d="M256 0C114.497 0 0 114.507 0 256c0 141.503 114.507 256 256 256 141.503 0 256-114.507 256-256C512 114.497 397.493 0 256 0zm0 472c-119.393 0-216-96.615-216-216 0-119.393 96.615-216 216-216 119.393 0 216 96.615 216 216 0 119.393-96.615 216-216 216z"
+                  fill="#AD0000"
+                  opacity="1"
+                  data-original="#000000"
+                  class=""
+                ></path>
+                <path
+                  d="M256 128.877c-11.046 0-20 8.954-20 20V277.67c0 11.046 8.954 20 20 20s20-8.954 20-20V148.877c0-11.046-8.954-20-20-20z"
+                  fill="#AD0000"
+                  opacity="1"
+                  data-original="#000000"
+                  class=""
+                ></path>
+                <circle
+                  cx="256"
+                  cy="349.16"
+                  r="27"
+                  fill="#AD0000"
+                  opacity="1"
+                  data-original="#000000"
+                  class=""
+                ></circle>
+              </g>
+            </svg>
+            <p>Please re-enter your password</p>
+          </div>
         </form>
-        <a href="index.html"
+        <a href="index.html" class="btn-sign-up"
           ><button class="sign-up-button">Create account</button></a
         >
         <p class="conditions-text">
@@ -164,5 +186,6 @@
       </section>
     </main>
     <script src="commonFeatures.js"></script>
+    <script src="createAcc.js"></script>
   </body>
 </html>
